welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:5: error: value =- is not a member of Int
			I=-i
                         ^